// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VehicleCard /> should be render bussiness price 1`] = `
<div
  className="card product"
  data-testid="card"
  data-uitestid="vehicle-card"
>
  <div
    className="card-header"
    data-uitestid="vehicle-card_header"
  >
    <div
      data-uitestid="vehicle-card_availability"
    >
      Factory Order
    </div>
    
  </div>
  <div
    className="image card-image -expand -plain"
    data-uitestid="vehicle-card_img-wrapper"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="image--native"
        data-nimg="fill"
        data-testid="card-image"
        data-uitestid="vehicle-card_img"
        decoding="async"
        onError={[Function]}
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="image--native"
          data-nimg="fill"
          data-testid="card-image"
          data-uitestid="vehicle-card_img"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60"
          srcSet="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="title"
    data-uitestid="vehicle-card_title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug?leaseType=BCH"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
        data-uitestid="vehicle-card_span_heading"
      >
        
      </span>
      <span
        className="heading -dark -small"
        data-uitestid="vehicle-card_span_description"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
    data-uitestid="vehicle-card_features"
  >
    <div
      data-uitestid="vehicle-card_features_transmission"
    >
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
        data-uitestid="vehicle-card_card-icon_Manual"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <div
        className="price--inner"
        data-uitestid="vehicle-card_price-inner"
      >
        <span
          className="price--sub"
        >
          £
        </span>
        <span
          className="price--pounds"
          data-uitestid="vehicle-card_span_pounds"
        >
          138
        </span>
        <span
          className="price--sub"
          data-uitestid="vehicle-card_span_sub"
        >
          .
          91
        </span>
      </div>
      <div
        className="price--label"
        data-uitestid="vehicle-card_price-label"
      >
        Per Month Exc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      data-uitestid="vehicle-card_view-offer-button"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug?leaseType=BCH"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "background": undefined,
          "borderColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card_compare-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card-wishlist-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256,448a32,32,0,0,1-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63,114.52,98.46,64,159.08,64c44.08,0,74.61,24.83,92.39,45.51a6,6,0,0,0,9.06,0C278.31,88.81,308.84,64,352.92,64,413.54,64,463.37,114.52,464,176.64c.54,54.21-18.63,104.26-58.61,153-18.77,22.87-52.8,59.45-131.39,112.8A32,32,0,0,1,256,448Z"
            />
          </svg>
        </i>
        Wishlist
      </div>
    </button>
  </div>
</div>
`;

exports[`<VehicleCard /> should be render correctly 1`] = `
<div
  className="card product"
  data-testid="card"
  data-uitestid="vehicle-card"
>
  <div
    className="card-header"
    data-uitestid="vehicle-card_header"
  >
    <div
      data-uitestid="vehicle-card_availability"
    >
      Factory Order
    </div>
    
  </div>
  <div
    className="image card-image -expand -plain"
    data-uitestid="vehicle-card_img-wrapper"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="image--native"
        data-nimg="fill"
        data-testid="card-image"
        data-uitestid="vehicle-card_img"
        decoding="async"
        onError={[Function]}
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="image--native"
          data-nimg="fill"
          data-testid="card-image"
          data-uitestid="vehicle-card_img"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60"
          srcSet="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="title"
    data-uitestid="vehicle-card_title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
        data-uitestid="vehicle-card_span_heading"
      >
        
      </span>
      <span
        className="heading -dark -small"
        data-uitestid="vehicle-card_span_description"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
    data-uitestid="vehicle-card_features"
  >
    <div
      data-uitestid="vehicle-card_features_transmission"
    >
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
        data-uitestid="vehicle-card_card-icon_Manual"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <div
        className="price--inner"
        data-uitestid="vehicle-card_price-inner"
      >
        <span
          className="price--sub"
        >
          £
        </span>
        <span
          className="price--pounds"
          data-uitestid="vehicle-card_span_pounds"
        >
          189
        </span>
        <span
          className="price--sub"
          data-uitestid="vehicle-card_span_sub"
        >
          .
          97
        </span>
      </div>
      <div
        className="price--label"
        data-uitestid="vehicle-card_price-label"
      >
        Per Month Inc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      data-uitestid="vehicle-card_view-offer-button"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "background": undefined,
          "borderColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card_compare-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card-wishlist-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256,448a32,32,0,0,1-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63,114.52,98.46,64,159.08,64c44.08,0,74.61,24.83,92.39,45.51a6,6,0,0,0,9.06,0C278.31,88.81,308.84,64,352.92,64,413.54,64,463.37,114.52,464,176.64c.54,54.21-18.63,104.26-58.61,153-18.77,22.87-52.8,59.45-131.39,112.8A32,32,0,0,1,256,448Z"
            />
          </svg>
        </i>
        Wishlist
      </div>
    </button>
  </div>
</div>
`;

exports[`<VehicleCard /> should have link in View Offer 1`] = `
<div
  className="card product"
  data-testid="card"
  data-uitestid="vehicle-card"
>
  <div
    className="card-header"
    data-uitestid="vehicle-card_header"
  >
    <div
      data-uitestid="vehicle-card_availability"
    >
      Factory Order
    </div>
    
  </div>
  <div
    className="image card-image -expand -plain"
    data-uitestid="vehicle-card_img-wrapper"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="image--native"
        data-nimg="fill"
        data-testid="card-image"
        data-uitestid="vehicle-card_img"
        decoding="async"
        onError={[Function]}
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="image--native"
          data-nimg="fill"
          data-testid="card-image"
          data-uitestid="vehicle-card_img"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          sizes="100vw"
          src="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60"
          srcSet="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F157703%2Fcap-86343-157703.jpg&w=3840&q=60 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="title"
    data-uitestid="vehicle-card_title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
        data-uitestid="vehicle-card_span_heading"
      >
        
      </span>
      <span
        className="heading -dark -small"
        data-uitestid="vehicle-card_span_description"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
    data-uitestid="vehicle-card_features"
  >
    <div
      data-uitestid="vehicle-card_features_transmission"
    >
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
        data-uitestid="vehicle-card_card-icon_Manual"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <div
        className="price--inner"
        data-uitestid="vehicle-card_price-inner"
      >
        <span
          className="price--sub"
        >
          £
        </span>
        <span
          className="price--pounds"
          data-uitestid="vehicle-card_span_pounds"
        >
          189
        </span>
        <span
          className="price--sub"
          data-uitestid="vehicle-card_span_sub"
        >
          .
          97
        </span>
      </div>
      <div
        className="price--label"
        data-uitestid="vehicle-card_price-label"
      >
        Per Month Inc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      data-uitestid="vehicle-card_view-offer-button"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "background": undefined,
          "borderColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card_compare-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
    <button
      className="-dark -xsmall -clear"
      data-uitestid="vehicle-card-wishlist-button"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256,448a32,32,0,0,1-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63,114.52,98.46,64,159.08,64c44.08,0,74.61,24.83,92.39,45.51a6,6,0,0,0,9.06,0C278.31,88.81,308.84,64,352.92,64,413.54,64,463.37,114.52,464,176.64c.54,54.21-18.63,104.26-58.61,153-18.77,22.87-52.8,59.45-131.39,112.8A32,32,0,0,1,256,448Z"
            />
          </svg>
        </i>
        Wishlist
      </div>
    </button>
  </div>
</div>
`;
